join voice channel

--- a/html/playlist_list.html
+++ b/html/playlist_list.html
@@ -16,10 +16,10 @@
                 <thead>
                     <tr>
                         <td>Nr</td>
-                        <td>Name</td>
+                        <td>Name (run)</td>
                         <td>Duration</td>
                         <td>Size</td>
-                        <td>Run this</td>
+                        <td>view</td>
                     </tr>
                 </thead>
                 <tbody>
